--- a/aviva/app/assets/styles/login/login.css
+++ b/aviva/app/assets/styles/login/login.css
@@ -21,7 +21,7 @@
 
 #content {
     width: 65vw;
-    height: auto;
+    height: 115vh;
     background-color: #fefefe;
     border: 1px solid #999999;
     text-align: center;
@@ -88,7 +88,7 @@
 
 #content > div:last-child div.body form > div span:first-child {
     width: 120px;
-    height: 60px;
+    height: 40px;
     line-height: 39px;
     float: left;
     text-align: right;
@@ -122,7 +122,34 @@
 #content > div:last-child div.body form > div:last-child span {
     height: 30px !important;
 }
-
+#content > div:last-child div.body form > div:last-child span:first-child {
+    width: 40%;
+    font-size: 12px;
+    cursor: pointer;
+    text-align: left;
+}
+#content > div:last-child div.body form > div:last-child span:first-child::before {
+    content: "";
+    display: block;
+    float: left;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #9d9d9d;
+    background-color: #adadad;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    margin-right: 5px;
+}
+#content > div:last-child div.body form > div:last-child span.active:first-child::before {
+    content: "\2713" !important;
+    background-color: #3c763d;
+    color: #fefefe;
+    padding-left: 3px;
+}
 #content > div:last-child div.footer {
     height: 20vh;
 }
