--- a/aviva/app/src/views/home/home.html
+++ b/aviva/app/src/views/home/home.html
@@ -35,7 +35,9 @@
         </aside>
 
         <section>
-            <div id="map" style="height: 100%;"></div>
+            <sebm-google-map [latitude]="lat" [longitude]="lng">
+                <sebm-google-map-marker [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>
+            </sebm-google-map>
         </section>
 
         <footer>
